<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddItemActivity">

    <TextView
        android:id="@+id/tvTitleAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="@string/labelTvTitleAdd" />

    <EditText
        android:id="@+id/etAddReference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="text"
        android:autofillHints=""
        android:hint="@string/labelAddReference" />

    <EditText
        android:id="@+id/etAddName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="text"
        android:autofillHints=""
        android:hint="@string/labelEtName" />

    <EditText
        android:id="@+id/etAddAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="numberSigned"
        android:autofillHints=""
        android:hint="@string/labelEtAmount" />

    <EditText
        android:id="@+id/etAddPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="numberDecimal"
        android:autofillHints=""
        android:hint="@string/labelEtPrice" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/labelBtBack"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/labelBtAdd"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</LinearLayout>